--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -2,4 +2,27 @@
 
 body {
     background-color: #FFFFF6;
+    text-align: center;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+.minesweeper {
+    width: 600px;
+    margin: 0.5rem auto;
+}
+
+.row {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.cell {
+    flex: 1 0 auto;
+    position: relative;
+    background-color: #F0FAFA;
+    border: black;
+    border-style: solid;
+    border-width: 0.1rem;
+    margin: 0.5px 0.5px 0.5px 0.5px;
 }
