--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -21,8 +21,6 @@ body {
     flex: 1 0 auto;
     position: relative;
     background-color: #F0FAFA;
-    border: black;
-    border-style: solid;
-    border-width: 0.1rem;
+    border: 0.1rem solid black;
     margin: 0.5px 0.5px 0.5px 0.5px;
 }
